Add a way to set the TextHolder title